Fixed margin overlapping

--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -127,4 +127,7 @@ select {
   .form-group > select {
   font-size: 1.0rem;
   }
+  #three {
+    margin-top: -50px;
+  }
 }
